# SumTablets

./: .gitignore  1_download_corpora.py  2_collate_tablets.py  3_clean_up_transliterations.py  4_create_lookups.py  5_add_glyphs.py  6_split.py  README.md  VERSION.yaml  pyproject.toml
data/mappings/: genre_normalization.json  glyph_name_replacements.json  reading_fixes.json  sign_list_replacements.json
src/: constants.py  epsd2-sl.json  glyph_name_to_glyph.json  morpheme_to_glyph_names.json
src/models/: __init__.py  cdl.py  corpus.py  enums.py  exceptions.py  special_token.py  text.py  utils.py
src/scripts/: 1_download_corpora.py  1a_download_data.py  1b_parse_data.ipynb  2_collate_tablets.ipynb  2_collate_tablets.py  3_clean_up_transliterations.ipynb  3_clean_up_transliterations.py  4_create_lookups.ipynb  4_create_lookups.py  5_add_glyphs.ipynb  5_add_glyphs.py  6_split.ipynb  6_split.py  run.py  verify.py
src/sumtablets/: __init__.py  _version.py  paths.py  pipeline.py
src/sumtablets/oracc/: __init__.py  cdl.py  corpus.py  enums.py  text.py
src/sumtablets/transforms/: __init__.py  cleaning.py  collation.py  glyphs.py  sign_lists.py
